# Spanish-F5

./: .dockerignore  .gitignore  .python-version  API_TESTS_RESULTS.md  CLAUDE.md  CODE_COVERAGE_REPORT.md  COVERAGE_ANALYSIS.md  DOCKER_LAYER_DIAGRAM.md  DOCKER_OPTIMIZATION.md  DOCUMENTATION_CLEANUP.md  Dockerfile  Dockerfile.api  FINAL_COVERAGE_REPORT.md  FINAL_SESSION_SUMMARY.md  FULL_TEST_SUITE_RESULTS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  MODULAR_ARCHITECTURE_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_ROADMAP.md  PHASE2_OPTIMIZATIONS.md  PHASE_4_5_COMPLETE.md  PROJECT_CODE_COVERAGE.md  PROJECT_STATUS.md  README.es.md  README.md  README_ENHANCEMENTS.md  REGIONAL_SPANISH_IMPLEMENTATION.md  ROADMAP.md  SESSION_SUMMARY.md  TEST_FIXES_SUMMARY.md  TEST_SUCCESS_SUMMARY.md  TTS_QUALITY_IMPROVEMENTS.md  analyze_coverage.py  backend_integration.py  baseline_quick.json  baseline_quick_fixed.json  benchmark_performance.py  benchmark_quality.py  benchmark_quick.py  (+28 more)
archive/performance/: PERFORMANCE_BASELINE.md
docs/: API_ENHANCED.md  API_REFACTORING.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIO_COMPRESSION.md  AUDIO_QUALITY_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  ENHANCEMENT_SUMMARY.md  GETTING_STARTED_REGIONAL.md  PROSODY_ANALYSIS_ACADEMIC_PAPERS.md  PROSODY_GUIDE.md  PROSODY_IMPROVEMENTS_IMPLEMENTATION.md  PROSODY_REGIONALIZATION_IMPROVEMENTS.md  README.md  REGIONAL_QUICK_REFERENCE.md  SPANISH_REGIONAL_GUIDE.md
docs/es/: ARQUITECTURA_ECOSISTEMA.md  GUIA_TECNICA.md
examples/: analyze_prosody.py  api_client_enhanced.py  check_audio_quality.py  demo_enhancements.py  modular_usage.py  prosody_demo.py
examples/prosody_improvements/: quick_wins.py
examples/regional_spanish/: README.md  basic_usage.py  tts_inference.py
models/E2TTS_Base/: config.yaml
models/F5TTS_Base/: config.yaml
models/Spanish/: transformer_config.yaml
ref_audio/: default.json  short.json
scripts/: cleanup-docs.sh  pretranscribe_reference_audio.py
src/f5_tts/: api.py
src/f5_tts/audio/: __init__.py  crossfading.py  processors.py  quality.py
src/f5_tts/core/: __init__.py  config.py  types.py
src/f5_tts/infer/: infer_gradio.py  pretranscription.py  utils_infer.py
src/f5_tts/rest_api/: __init__.py  app.py  audio_compression.py  config.py  enhancements.py  models.py  state.py  tts_processor.py
src/f5_tts/rest_api/routes/: __init__.py  analysis.py  tasks.py  tts.py  upload.py
src/f5_tts/text/: __init__.py  breath_pause.py  chunker.py  discourse_prosody.py  normalizer.py  prosody.py  spanish_regional.py  unified_analysis.py
src/f5_tts/train/datasets/: prepare_spanish_regional.py
tests/: test_adaptive_config.py  test_api.py  test_api_enhanced_simple.py  test_api_integration.py  test_api_modules.py  test_audio.py  test_audio_compression.py  test_audio_processors.py  test_audio_quality.py  test_breath_pause.py  test_core.py  test_infer_utils.py  test_model_utils_helpers.py  test_performance_regression.py  test_prosody.py  test_prosody_improvements.py  test_short_audio_fix.py  test_spanish_regional.py  test_text_chunker.py  test_text_normalizer.py
