[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts"
dynamic = ["version"]
description = "F5-TTS: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "huggingface-hub==0.32.0",
    "accelerate>=0.30.0",
    "bitsandbytes==0.44.1",
    "cached_path",
    "click==8.1.7",
    "datasets==3.0.1",
    "ema_pytorch>=0.5.2",
    "gradio==5.35.0",
    "jieba==0.42.1",
    "librosa==0.9.1",
    "matplotlib==3.9.2",
    "numpy<=1.26.4",
    "pydub==0.25.1",
    "pypinyin==0.53.0",
    "safetensors==0.4.5",
    "soundfile==0.12.1",
    "tomli==2.0.2",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchdiffeq==0.2.4",
    "tqdm>=4.65.0",
    "transformers==4.51.3",
    "transformers_stream_generator==0.0.5",
    "vocos==0.1.0",
    "wandb==0.18.3",
    "x_transformers>=2.3.5",
    "num2words==0.5.13",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "funasr",
    "jiwer",
    "modelscope",
    "zhconv",
    "zhon",
]

[project.urls]
Homepage = "https://github.com/SWivid/F5-TTS"

[project.scripts]
"f5-tts_infer-cli" = "f5_tts.infer.infer_cli:main"
"f5-tts_infer-gradio" = "f5_tts.infer.infer_gradio:main"
"f5-tts_finetune-cli" = "f5_tts.train.finetune_cli:main"
"f5-tts_finetune-gradio" = "f5_tts.train.finetune_gradio:main"
